--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="#work">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#blog">Blog</a>
+            <a class="nav-link js-scroll" href="#blog">Apps</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -362,7 +362,84 @@
     </div>
   </div>
 
+  <!--/ Section Blog Star /-->
+  <section id="blog" class="blog-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box text-center">
+            <h3 class="title-a">
+              Apps
+            </h3>
+            <p class="subtitle-a">
+              On Google play.
+            </p>
+            <div class="line-mf"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card card-blog">
+            <div class="card-img">
+              <a href="blog-single.html"><img src="img/psss.jpg" alt="" class="img-fluid"></a>
+            </div>
+            <div class="card-body">
+              <div class="card-category-box">
+                <div class="card-category">
+                  <h6 class="category">Style</h6>
+                </div>
+              </div>
+              <h3 class="card-title"><a href="blog-single.html">Style - 500+ Universal fonts</a></h3>
+              <p class="card-description">
+              Just like any Stylish Text app, this app also does the same but unlike other apps that contain less than 150 fonts this app contains 500+ fonts and some of them are custom
+              </p>
+            </div>
 
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card card-blog">
+            <div class="card-img">
+              <a href="blog-single.html"><img src="img/mark.jpg" alt="" class="img-fluid"></a>
+            </div>
+            <div class="card-body">
+              <div class="card-category-box">
+                <div class="card-category">
+                  <h6 class="category">Mark</h6>
+                </div>
+              </div>
+              <h3 class="card-title"><a href="blog-single.html">Mark - Auto Screenshot deleter</a></h3>
+              <p class="card-description">
+                Mark helps you to store solely those screenshot which you really want to store in your phone by marking the temporary screenshots.
+              </p>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card card-blog">
+            <div class="card-img">
+              <a href="blog-single.html"><img src="img/pppp.jpg" alt="" class="img-fluid"></a>
+            </div>
+            <div class="card-body">
+              <div class="card-category-box">
+                <div class="card-category">
+                  <h6 class="category">Pack</h6>
+                </div>
+              </div>
+              <h3 class="card-title"><a href="blog-single.html">Programmers Pack</a></h3>
+              <p class="card-description">
+              Programmers Pack is an on go app for every programmer, especially for beginners.
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Section Blog End /-->
 
   <!--/ Section Contact-Footer Star /-->
   <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
