--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll" href="#work">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="blog-single.html"Apps</a>
+            <a class="nav-link js-scroll" href="blog-single.html">Apps</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
