--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <!-- Favicons -->
   <!-- <link href="img/favicon.png" rel="icon"> -->
-<!--   <link href="img/apple-touch-icon.png" rel="apple-touch-icon"> -->
+  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,10 +56,10 @@
             <a class="nav-link js-scroll" href="#service">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Work</a>
+            <a class="nav-link js-scroll" href="blog-single.html">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="blog-single.html">Apps</a>
+            <a class="nav-link js-scroll" href="#blog">Apps</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -71,14 +71,14 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/ttwo.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/background.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Tehleel Mir</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Android Developer,Web Developer,Backend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Android Developer,Graphic Designer,Web Developer,Backend Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -110,22 +110,27 @@
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                  <span>JAVA</span> <span class="pull-right">95%</span>
+                  <span>JAVA</span> <span class="pull-right">100%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">75%</span>
+                  <span>Kotlin</span> <span class="pull-right">75%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>C/C++</span> <span class="pull-right">50%</span>
+                  <span>PHP</span> <span class="pull-right">50%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>XML</span> <span class="pull-right">80%</span>
+                  <span>Firebase</span> <span class="pull-right">80%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>JSON</span> <span class="pull-right">80%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -140,26 +145,24 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Google-certified Android Developer.
-                    Full-time Android and Web developer with knowledge of most popular
-                    languages of all time such as java, c, c++, PHP, and a few more.
+                    I have been a freelancer and have more then 3 years of experience in computer
+                    science field. I have made projects which have 50 thousands plus downloads on
+                    google play store. As of now my tech stack consists of java, kotli, json, firebase,
+                    sqlLite, adobe xd, github, git and few more
                   </p>
                   <p class="lead">
                     EDUCATION & CREDENTIALS
 
                     ICSC, Srinagar, India.
                     Bachelor of Computer Applications
-                    Graduated May 2021
+                    Graduated May 2021.
+
+                    Android Development from Google training program
                   </p>
                   <p class="lead">
-                    Developed App and Projects:
-                    24 Food Delivery,
-                    Mark,
-                    Style,
-                    Programmers Pack.
-                    Projects:
-                    Online Student Registration Console,
-                    Management System For Hotel...
+                    You can look at my projects and work on my <br>
+                    <a href="https://play.google.com/store/apps/dev?id=9086481429286206015&hl=en_IN&gl=US"> "Google Play Profile" </a> <br>
+                    <a href="https://github.com/TehleelMir"> "Github Profile" </a>
                   </p>
                 </div>
               </div>
@@ -177,7 +180,7 @@
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a">
-              Services
+              Things I Can Do For You
             </h3>
             <p class="subtitle-a">
 
@@ -269,7 +272,7 @@
     </div>
   </section>
   <!--/ Section Services End /-->
-
+<!--
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
@@ -325,7 +328,7 @@
 
 
   <!--/ Section Testimonials Star /-->
-  <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
+  <!-- <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -360,7 +363,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> --> -->
 
   <!--/ Section Blog Star /-->
   <section id="blog" class="blog-mf sect-pt4 route">
