--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Shalimar Srg. J&K India</li>
-                      <li><span class="ion-ios-telephone"></span> +917006481175</li>
+                      <li><span class="ion-ios-telephone"></span>...</li>
                       <li><span class="ion-email"></span> tehleelmir64@gmail.com</li>
                     </ul>
                   </div>
