--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                       <p><span class="title-s">Name: </span> <span>Tehleel Mir</span></p>
                       <p><span class="title-s">Profile: </span> <span>Android Developer</span></p>
                       <p><span class="title-s">Email: </span> <span>tehleelmir64@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+917006481175</span></p>
+                      <p><span class="title-s">Phone: </span> <span>...</span></p>
                     </div>
                   </div>
                 </div>
